[gd_scene load_steps=9 format=3 uid="uid://rpadbuu18fqu"]

[ext_resource type="Texture2D" uid="uid://283dj7fbimh1" path="res://assets/graphics/player/player.png" id="1_7rimn"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_ytcq2"]
[ext_resource type="Texture2D" uid="uid://cduwkklujsqnj" path="res://assets/graphics/decals/white.png" id="3_sbomq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sh2l7"]
radius = 65.0077

[sub_resource type="Gradient" id="Gradient_0r7kb"]
offsets = PackedFloat32Array(0, 0.991803)
colors = PackedColorArray(0.509804, 0.729412, 1, 1, 0.643137, 0.8, 1, 0.756863)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_aqme6"]
gradient = SubResource("Gradient_0r7kb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kcqne"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
scale_min = 0.3
scale_max = 0.8
color = Color(0.509033, 0.728257, 1, 1)
color_ramp = SubResource("GradientTexture1D_aqme6")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_il3oj"]
polygon = PackedVector2Array(-63, -21, -61, -27, -58, -30, -57, -34, -56, -39, -52, -43, -48, -46, -44, -47, -39, -49, -35, -49, -33, -52, -26, -56, -20, -59, -16, -59, -15, -57, -8, -60, -3, -61, 2, -60, 6, -61, 8, -59, 16, -62, 20, -63, 23, -61, 27, -57, 31, -51, 33, -49, 36, -46, 41, -42, 41, -39, 42, -35, 45, -32, 51, -31, 57, -28, 63, -23, 67, -18, 72, -13, 78, -13, 85, -13, 92, -7, 97, -6, 105, -5, 107, -1, 115, 0, 120, 1, 121, 3, 119, 5, 119, 7, 121, 6, 124, 4, 126, 6, 129, 10, 130, 16, 130, 23, 128, 28, 125, 31, 122, 32, 120, 30, 117, 30, 118, 32, 119, 35, 108, 36, 107, 34, 104, 34, 98, 40, 97, 42, 93, 43, 92, 47, 91, 50, 88, 51, 84, 52, 60, 52, 57, 51, 55, 48, 54, 45, 56, 42, 57, 40, 41, 40, 38, 38, 37, 41, 33, 42, 29, 44, 23, 45, 19, 46, 10, 52, 4, 55, -2, 57, -5, 57, -9, 57, -11, 60, -20, 59, -22, 58, -26, 59, -31, 57, -37, 53, -39, 51, -40, 47, -40, 44, -44, 40, -46, 36, -47, 32, -51, 30, -55, 25, -56, 21, -56, 19, -55, 17, -55, 14, -59, 12, -62, 8, -64, 2, -64, -3, -63, -8, -63, -11, -65, -13, -64, -17)

[node name="Player" type="CharacterBody2D" groups=["Entity"]]
collision_mask = 31
script = ExtResource("1_ytcq2")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(33, -1)
rotation = 1.5708
texture = ExtResource("1_7rimn")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sh2l7")

[node name="LaserReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(145, 16)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(141, 4)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(141, 27)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(130, 18)
emitting = false
process_material = SubResource("ParticleProcessMaterial_kcqne")
texture = ExtResource("3_sbomq")
lifetime = 0.2
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_il3oj")
metadata/_edit_lock_ = true

[connection signal="timeout" from="LaserReloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
